--- a/index.html
+++ b/index.html
@@ -5,8 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <style>
+        h1 {
+            background-color: aqua;
+            height: 400px;
+        }
+        span {
+            background-color: rgb(113, 165, 165);
+            height: 400px;
+        }
+        * {
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+
+        /* .container {
+            display: flex;
+        } */
+    </style>
 </head>
 <body>
-    <h1>This is homepage</h1>
+    <div class="container">
+        <h1>This is A paragraph</h1>
+        <span>Span1</span>
+    </div>
 </body>
 </html>
